compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_punning_4.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  wibble(arg::)\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:14
  │
3 │   wibble(arg::)
  │              ^ There must be a 'let' to bind variable to value

Hint: Use let for binding.
See: https://tour.gleam.run/basics/assignments/
