compiler-core/src/parse/snapshots/gleam_core__parse__tests__merge_conflict_full.snap
---
source: compiler-core/src/parse/tests.rs
expression: "<<<<<<< HEAD\n  io.println(\"Hello Wibble!\")\n=======\n  io.println(\"Hello Wobble!\")\n>>>>>>> main"
---
----- SOURCE CODE
<<<<<<< HEAD
  io.println("Hello Wibble!")
=======
  io.println("Hello Wobble!")
>>>>>>> main

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:7
  │
1 │ <<<<<<< HEAD
  │       ^ I was not expecting this

Found `<`, expected one of: 
- `>>`
- a bit array segment
