compiler-core/src/parse/snapshots/gleam_core__parse__tests__merge_conflict_gt_with_branch_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let wobble: Int = 32\n>>>>>>> main"
---
----- SOURCE CODE
let wobble: Int = 32
>>>>>>> main

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ >>>>>>> main
  │ ^^ I was not expecting this

Found `>>`, expected one of: 
- An import, const, type, or function.
