compiler-core/src/parse/snapshots/gleam_core__parse__tests__merge_conflict_lt_with_head.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let wobble: Int = 32\n<<<<<<< HEAD"
---
----- SOURCE CODE
let wobble: Int = 32
<<<<<<< HEAD

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:7
  │
2 │ <<<<<<< HEAD
  │       ^ I was not expecting this

Found `<`, expected one of: 
- `>>`
- a bit array segment
